Fix X overflow

--- a/src/components/Country.module.scss
+++ b/src/components/Country.module.scss
@@ -30,7 +30,7 @@ $secondary2: #d63e79;
 
 .map {
   display: block;
-  min-width: 180px;
+  min-width: 158px;
   min-height: 150px;
   filter: brightness(0);
   opacity: 0.2;
